apps/control-hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-hub
  namespace: control-hub
  labels:
    app.kubernetes.io/name: control-hub
    app.kubernetes.io/instance: control-hub
    app.kubernetes.io/component: backend

spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: control-hub
      app.kubernetes.io/instance: control-hub

  template:
    metadata:
      labels:
        app.kubernetes.io/name: control-hub
        app.kubernetes.io/instance: control-hub
        app.kubernetes.io/component: backend

    spec:
      serviceAccountName: control-hub

      imagePullSecrets:
        - name: ghcr

      containers:
        - name: control-hub
          image: ghcr.io/pestana1213/control-hub

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30

          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"

            limits:
              memory: "768Mi"
