apps/control-hub/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golias-web
  namespace: control-hub
  labels:
    app.kubernetes.io/name: golias-web
    app.kubernetes.io/instance: golias-web
spec:
  selector:
    app.kubernetes.io/name: golias-web
    app.kubernetes.io/instance: golias-web
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
