apps/control-hub/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golias-web
  namespace: control-hub
  labels:
    app.kubernetes.io/name: golias-web
    app.kubernetes.io/instance: golias-web
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - golias
  rules:
    - host: golias
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golias-web
                port:
                  name: http
